--- a/src/components/messageBox.css
+++ b/src/components/messageBox.css
@@ -1,12 +1,37 @@
 .messageBox {
 	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	background-color: rgba(255, 255, 255, 0);
-
-	display: flex;
+	bottom: 0;
 	justify-content: center;
 	align-items: center;
+	display: flex;
+	width: 100%;
+	height: 10%;
+	background-color: rgba(255, 255, 255, 0);
+	margin: -5px;
+}
+
+.inputBox {
+	width: 25%;
+}
+
+.messageWindow {
+	overflow-y: scroll;
+	border: 1px solid #27213c;
+	display: flex;
+	width: 90%;
+	height: 600px;
+	flex-direction: column;
+	padding: 5px 10px 5px 5px;
+}
+
+
+.chatDisplay {
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	margin-top: 5px;
+}
+
+.messageForm {
+	margin-top: 5px;
 }
