created a login page

--- a/src/components/TextBar.css
+++ b/src/components/TextBar.css
@@ -1,4 +1,4 @@
-.textbar {
+/* .textbar {
     display: flex;
     align-items: stretch;
   }
@@ -12,4 +12,4 @@
     border-radius: 0;
     border: none;
   }
-  
+   */
