--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ form {
 	position: relative;
 }
 
+/* this creates a background color for the chat window */
 /* form:after {
 	content: "";
 	display: block;
