--- a/src/components/messageBox.css
+++ b/src/components/messageBox.css
@@ -7,16 +7,19 @@
 	width: 100%;
 	height: 10%;
 	background-color: rgba(255, 255, 255, 0);
-	margin: -5px;
+	/* margin: -5px; */
 }
 
-.inputBox {
-	width: 50%;
+.messageInputBox {
+	width: 85.25%;
+	/* height: 50%; */
 	border: 1px solid #27213c;
 }
 
 .chatSendButton {
 	border: 1px solid #27213c;
+	/* height: 50%; */
+
 }
 
 .messageWindow {
